
[package]
name = "google-file-system"
version = "0.1.0"
edition = "2021"

[lib]
name = "gfs"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "5.1.4"
crc32fast = "1.4.2"
lru = "0.12.5"
sha2 = "0.10.8"
tokio = { version = "1.41.0", features = ["full", "sync"] }

trie-rs = "0.4.2"

